Resolved Robolectric issues with jdk.internal.access.SharedSecrets when setting up